--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -7,9 +7,6 @@
 a:hover{
     text-decoration: none
 }
-nav div:nth-child(1){
-    margin: 0 50px;
-}
 .til{
     line-height: 60px;
     background: transparent;
@@ -23,6 +20,9 @@ nav div:nth-child(1){
 }
 .til li:hover a{
     color: #8a8a8a;
+}
+.myNavbar-toggle{
+    margin-top: 10px;
 }
 .bg{
     width: 100%;
@@ -61,13 +61,16 @@ h1,.bg h2{
     color: #ccc;
 }
 .pro img{
-    height: 400px;
+    width: 100%;
 }
 .file ul{
-    padding: 20px 150px 0 150px;
+    padding: 20px 50px 0 50px;
+}
+.file ul li{
+    text-align: center;
 }
 .file ul li img{
-    width: 200px;
+    width: 84%;
     height: 120px;
 }
 .file ul li img:hover{
